--- a/html/task3.html
+++ b/html/task3.html
@@ -16,7 +16,7 @@
                 <li><a href="#" id="e">Налаштування</a></li>
             </menu>
             <p class="small">
-                Адреса поточної стрінки: <a href="https://d1mon4ik1.github.io/9/html/task3.html" class="nine" target="_blank">https://d1mon4ik1.github.io/9/html/task3.html</a><br>
+                Адреса поточної сторінки: <a href="https://d1mon4ik1.github.io/9/html/task3.html" class="nine" target="_blank">https://d1mon4ik1.github.io/9/html/task3.html</a><br>
                 Автор: Дмитрій Писаренко<br>
                 Група: 102-ТК
             </p>
